<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alphabet</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Save">Save</string>
    <string name="Share">Share</string>
    <string name="RateApp">Rate App</string>
    <string name="About">About</string>
    <string name="Img_Des">Image Des</string>
    <string name="capital_alphabet">Alphabet</string>
    <string name="small_alphabet">Small Alphabet</string>
    <string name="more_app">More Apps</string>
     <string name="more_apps_developer_id">https://play.google.com/store/apps/developer?id=Viavi+Lab</string>
    
    <string name="admob_publisher_id">ca-app-pub-8356404931736973/2388386793</string> <!-- Change AdMob Id -->
    <string name="startapp_app_id">206744340</string> <!-- Change StartApp Id -->
    <string name="startapp_dev_id">101068545</string> <!-- Change StartApp Dev Id -->
     

</resources>